--- a/four/four.html
+++ b/four/four.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="https://use.typekit.net/zrh2dda.css">
-        <link rel="stylesheet" href="css/style.css">
-
+        <link rel="stylesheet" href="../css/style.css">
         <title>AOK</title>
     </head>
     <body>
-   <h4>doesn't this guitar sound </h4> 
-   <h4 id="so">so</h4>
-  <a href="two/two.html"> <h4 id="good?"> good?</h4> </a>
+   <h4 class="">I know I'll be A-O, A-O-K </h4> 
+   <h4>I know I'll be A-O, </h4> 
+   <a href="../five/five.html" > <h4> A-O-K </h4> </a>
+ 
     </body>
 </html>
