--- a/five/five.html
+++ b/five/five.html
@@ -3,13 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="https://use.typekit.net/zrh2dda.css">
-        <link rel="stylesheet" href="css/style.css">
-
+        <link rel="stylesheet" href="../css/style.css">
         <title>AOK</title>
     </head>
     <body>
-   <h4>doesn't this guitar sound </h4> 
-   <h4 id="so">so</h4>
-  <a href="two/two.html"> <h4 id="good?"> good?</h4> </a>
+   <h4>when i see trouble come my way </h4> 
+   <h4>i be makin'</h4>
+  <a href="../six/six.html"> <h4> lemonade</h4> </a>
     </body>
 </html>
