--- a/three/three.html
+++ b/three/three.html
@@ -3,13 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="https://use.typekit.net/zrh2dda.css">
-        <link rel="stylesheet" href="css/style.css">
-
+        <link rel="stylesheet" href="../css/style.css">
         <title>AOK</title>
     </head>
     <body>
-   <h4>doesn't this guitar sound </h4> 
-   <h4 id="so">so</h4>
-  <a href="two/two.html"> <h4 id="good?"> good?</h4> </a>
+   <h4>living in this big blue world </h4> 
+   <h4>with my head up in outer</h4>
+  <a href="../four/four.html"> <h4> space</h4> </a>
     </body>
 </html>
