--- a/two/two.html
+++ b/two/two.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="https://use.typekit.net/zrh2dda.css">
-        <link rel="stylesheet" href="css/style.css">
-
+        <link rel="stylesheet" href="../css/style.css">
         <title>AOK</title>
     </head>
     <body>
-   <h4>doesn't this guitar sound </h4> 
-   <h4 id="so">so</h4>
-  <a href="two/two.html"> <h4 id="good?"> good?</h4> </a>
+    <h4 id="mOne">mmm,</h4>
+    <h4 id="mTwo">mmm,<h4>
+    <h4 id="mThree">mmm</h4>
+    <a href="../three/three.html"><h4>so sweet</h4> </a>
     </body>
 </html>
