--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
         <title>AOK</title>
     </head>
     <body>
-   <h4>doesn't this guitar sound </h4> 
-   <h4 id="so">so</h4>
-  <a href="two/two.html"> <h4 id="good?"> good?</h4> </a>
+   <h4>doesn't this guitar sound
+   <div id="so"> so </div>
+    </h4> 
+   
+  <a class="soGood" href="two/two.html"> <h4 id="good?"> good?</h4> </a>
     </body>
 </html>
