--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
         <title>AOK</title>
     </head>
     <body>
-   <h4>doesn't this guitar sound
+   <h4>doesn't this guitar
+    
+    
+    <div class="logo is-animetion">
+        <span>S</span>
+        <span>O</span>
+        <span>U</span>
+        <span>N</span>
+        <span>D</span>
+      </div>
+      <!-- code from: https://codepen.io/qrac/pen/MRPJLB -->
    <div id="so"> so </div>
     </h4> 
    
