--- a/three/three.html
+++ b/three/three.html
@@ -7,8 +7,10 @@
         <title>AOK</title>
     </head>
     <body>
-   <h4>living in this big blue world </h4> 
-   <h4>with my head up in outer</h4>
-  <a href="../four/four.html"> <h4> space</h4> </a>
+   <h4>living in this </h4> 
+   <h4>big blue world </h4> 
+   <h4>with my head </h4>
+    <h4 id="inOuterSpace">up in outer </h4>
+  <a href="../four/four.html"> <h4 id="inOuterSpace"> space</h4> </a>
     </body>
 </html>
