--- a/index.html
+++ b/index.html
@@ -8,20 +8,29 @@
         <title>AOK</title>
     </head>
     <body>
-   <h4>doesn't this guitar
+      <section>
+        <div class="opening">
+   <h4>doesn't this guitar </h4> 
+   </div>
     
     
-    <div class="logo is-animetion">
+    <!-- <div class="logo is-animetion">
         <span>S</span>
         <span>O</span>
         <span>U</span>
         <span>N</span>
         <span>D</span>
       </div>
-      <!-- code from: https://codepen.io/qrac/pen/MRPJLB -->
-   <div id="so"> so </div>
+      code from: https://codepen.io/qrac/pen/MRPJLB -->
+      <div class="soundSoGood">
+   <h4>sound</h4>
+      <div id="so"> <h4>so</h4> </div>
     </h4> 
    
-  <a class="soGood" href="two/two.html"> <h4 id="good?"> good?</h4> </a>
+  <a href="two/two.html"> <h4 id="good"> good?</h4> </a>
+  </div>
+  </div>
+  
+  </section>
     </body>
 </html>
