--- a/three/three.html
+++ b/three/three.html
@@ -7,10 +7,15 @@
         <title>AOK</title>
     </head>
     <body>
-   <h4>living in this </h4> 
-   <h4>big blue world </h4> 
-   <h4>with my head </h4>
-    <h4 id="inOuterSpace">up in outer </h4>
-  <a href="../four/four.html"> <h4 id="inOuterSpace"> space</h4> </a>
+      <div class="threeI">
+   <h4>living in this </h4>
+    <h4 id="bigBlueWorld"> big blue world </h4>
+   </div>
+   <div class="threeII">
+      <h4 id="withMy"> with my </h4> 
+      <h4 id="head"> head </h4>
+    <h4 id="upInOuter">up in outer </h4>
+  <a href="../four/four.html"> <h4> space </h4> </a>
+  </div>
     </body>
-</html>
+</html> 
