--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <body>
       <section>
         <div class="opening">
-   <h4>doesn't this guitar </h4> 
+   <h4 id="doesnt">doesn't </h4>
+     <h4 id="this">this</h4>
+      <h4 id="guitar">guitar </h4> 
    </div>
     
     
@@ -23,7 +25,7 @@
       </div>
       code from: https://codepen.io/qrac/pen/MRPJLB -->
       <div class="soundSoGood">
-   <h4>sound</h4>
+   <h4 id="sound">sound</h4>
       <div id="so"> <h4>so</h4> </div>
     </h4> 
    
