--- a/eight/eight.html
+++ b/eight/eight.html
@@ -11,10 +11,8 @@
 
 
 
-
-       <h4> i be  makin' <a href="../eight/eight.html"> lemonade</h4> </a>
-    </body>
+<h4> I know I'll be A-O, A-O-K </h4> 
+<h4>I know I'll be A-O, </h4> 
+<a href="../nine/nine.html"> <h4>A-O-K</h4> </a>
+</body>
 </html>
-
-
-
