--- a/five/five.html
+++ b/five/five.html
@@ -3,13 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="https://use.typekit.net/zrh2dda.css">
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="css/style.css">
         <title>AOK</title>
     </head>
     <body>
-   <h4>when i see trouble 
-    <br>come  my way i be 
-    <br> makin' <a href="../six/six.html"> lemonade</h4> </a>
-    </section>
+        <div class="five">
+    <h4 id="aokI">I know I'll be A-O, A-O-K </h4> 
+    <div class="aokII">
+    <a href="../six/six.html"> <h4> I know I'll be A-O, A-O-K </h4> </a>
+    </div>
+    </div>
     </body>
 </html>
