--- a/index.html
+++ b/index.html
@@ -9,30 +9,16 @@
     </head>
     <body>
       <section>
-        <div class="opening">
+        <div class="oneI">
    <h4 id="doesnt">doesn't </h4>
      <h4 id="this">this</h4>
       <h4 id="guitar">guitar </h4> 
-   </div>
-    
-    
-    <!-- <div class="logo is-animetion">
-        <span>S</span>
-        <span>O</span>
-        <span>U</span>
-        <span>N</span>
-        <span>D</span>
       </div>
-      code from: https://codepen.io/qrac/pen/MRPJLB -->
-      <div class="soundSoGood">
+      <div class="oneII">
    <h4 id="sound">sound</h4>
-      <div id="so"> <h4>so</h4> </div>
-    </h4> 
-   
+    <h4 id="so"> so</h4> 
   <a href="two/two.html"> <h4 id="good"> good?</h4> </a>
-  </div>
-  </div>
-  
+</div>
   </section>
     </body>
 </html>
