--- a/three/three.html
+++ b/three/three.html
@@ -8,14 +8,14 @@
     </head>
     <body>
       <div class="threeI">
-   <h4>living in this </h4>
-    <h4 id="bigBlueWorld"> big blue world </h4>
-   </div>
-   <div class="threeII">
-      <h4 id="withMy"> with my </h4> 
-      <h4 id="head"> head </h4>
-    <h4 id="upInOuter">up in outer </h4>
-  <a href="../four/four.html"> <h4> space </h4> </a>
+   <h4 id="living">living </h4>
+    <h4 id="in">in</h4> 
+   <h4 id="thisII"> this </h4>
+
+    <h4 id="big"> big </h4>
+      <h4 id="blue"> blue </h4>
+
+  <a href="../four/four.html"> <h4 id="world"> world </h4> </a>
   </div>
     </body>
 </html> 
