--- a/four/four.html
+++ b/four/four.html
@@ -3,13 +3,21 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="https://use.typekit.net/zrh2dda.css">
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="css/style.css">
         <title>AOK</title>
     </head>
     <body>
-   <h4 class="">I know I'll be A-O, A-O-K </h4> 
-   <h4>I know I'll be A-O, </h4> 
-   <a href="../five/five.html" > <h4> A-O-K </h4> </a>
- 
+   <section>
+   <div class="four">
+    <h4 id="with"> with </h4>
+      <h4 id="my" > my </h4> 
+    <h4 id="head"> head </h4>
+  <h4 id="up"> up </h4>
+   <h4 id="in" >in</h4>
+    <h4 id="outer"> outer</h4>
+<a href="../five/five.html"> <h4 id="space"> space </h4> </a>
+</div>
+</section>
+  </body>
     </body>
 </html>
