--- a/nine/nine.html
+++ b/nine/nine.html
@@ -7,14 +7,8 @@
         <title>AOK</title>
     </head>
     <body>
-    
-
-
-
-
-       <h4> i be  makin' <a href="../eight/eight.html"> lemonade</h4> </a>
-    </body>
+<h4> A-O-K </h4> 
+<h4>By Tai Verdes </h4> 
+<a href="../index.html"> <h4>run it back!</h4> </a>
+</body>
 </html>
-
-
-
