--- a/six/six.html
+++ b/six/six.html
@@ -7,9 +7,15 @@
         <title>AOK</title>
     </head>
     <body>
-       <h4> I know I'll be A-O, A-O-K </h4> 
-        <h4>I know I'll be A-O, </h4> 
-        <h4> A-O-K </h4>
-      <a href="../index.html"> <h4>back to start</h4> </a>
+      
+
+
+
+
+
+
+
+      <h4>when i see trouble come  
+        <a href="../seven/seven.html"> way </h4> </a> 
     </body>
 </html>
