--- a/six/six.html
+++ b/six/six.html
@@ -14,8 +14,14 @@
 
 
 
-
-      <h4>when i see trouble come  
-        <a href="../seven/seven.html"> way </h4> </a> 
+        <div class="six">
+      <h4 id="when">when </h4>
+       <h4 id="i">i  </h4>
+       <h4 id="see">see</h4> 
+        <h4 id="trouble">trouble</h4>
+       <h4 id="come">come</h4>
+        <h4 id="myI">my</h4>
+        <a href="../seven/seven.html"><h4 id="way"> way </h4> </a> 
+    </div>
     </body>
 </html>
