--- a/three/three.html
+++ b/three/three.html
@@ -9,7 +9,7 @@
     <body>
       <div class="threeI">
    <h4 id="living">living </h4>
-    <h4 id="in">in</h4> 
+    <h4 id="inI">in</h4> 
    <h4 id="thisII"> this </h4>
 
     <h4 id="big"> big </h4>
