--- a/seven/seven.html
+++ b/seven/seven.html
@@ -11,8 +11,12 @@
 
 
 
-
-       <h4> i be  makin' <a href="../eight/eight.html"> lemonade</h4> </a>
+        <div class="seven">
+       <h4 id="iII"> i </h4>
+         <h4 id="be">be</h4> 
+          <h4 id="makin">makin'</h4>
+           <a href="../eight/eight.html"> <h4 id="lemonade">lemonade</h4> </a>
+           </div>
     </body>
 </html>
 
