--- a/eight/eight.html
+++ b/eight/eight.html
@@ -10,9 +10,12 @@
     
 
 
-
+<div class="eight">
 <h4> I know I'll be A-O, A-O-K </h4> 
+<div class="eightI">
 <h4>I know I'll be A-O, </h4> 
 <a href="../nine/nine.html"> <h4>A-O-K</h4> </a>
+</div>
+</div>
 </body>
 </html>
