--- a/eight/eight.html
+++ b/eight/eight.html
@@ -12,10 +12,9 @@
 
 <div class="eight">
 <h4> I know I'll be A-O, A-O-K </h4> 
-<div class="eightI">
-<h4>I know I'll be A-O, </h4> 
-<a href="../nine/nine.html"> <h4>A-O-K</h4> </a>
 </div>
+<div class="eightI"> 
+<a href="../nine/nine.html"> <h4>I know I'll be A-O, A-O-K</h4> </a>
 </div>
 </body>
 </html>
